# sol-examples

./: .gitignore  package-lock.json  package.json
clients/airdrop/: index.ts
clients/counter-client/: calculator.ts  index.ts
clients/create-token/: index.ts
clients/show-balance/: index.ts
clients/transfer-sol/: index.ts
contracts/calculator/: lib.rs
contracts/example-hello-world/: lib.rs
contracts/pdas/address-contract/src/: lib.rs
contracts/pdas/client/: index.ts  main.ts  package-lock.json  package.json  utils.ts
contracts/pdas/ecom-contract/: Cargo.toml
contracts/pdas/ecom-contract/src/: lib.rs
contracts/pdas/profile-contract/: Cargo.toml
contracts/pdas/profile-contract/src/: lib.rs
